--- a/app/src/main/res/layout/example_item.xml
+++ b/app/src/main/res/layout/example_item.xml
@@ -23,14 +23,14 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="247dp"
-            android:layout_height="43dp"
+            android:layout_width="197dp"
+            android:layout_height="40dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="21dp"
-            android:layout_marginRight="21dp"
+            android:layout_marginTop="11dp"
+            android:layout_marginEnd="71dp"
+            android:layout_marginRight="71dp"
             android:text="Line 1"
             android:textColor="@android:color/black"
             android:textSize="20sp"
@@ -50,6 +50,18 @@
             android:layout_marginRight="18dp"
             android:text="Line 2"
             android:textSize="15sp" />
+
+        <ImageView
+            android:id="@+id/image_delete"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginBottom="45dp"
+            android:src="@drawable/delete" />
 
     </RelativeLayout>
 
